ifdef::env-github[]
NOTE: For the best reading experience,
please view this documentation at https://www.elastic.co/guide/en/apm/agent/php[elastic.co]
endif::[]

////
[[release-notes-x.x.x]]
==== x.x.x - YYYY/MM/DD

[float]
===== Breaking changes

[float]
===== Features
* Cool new feature: {pull}2526[#2526]

[float]
===== Bug fixes
////

[[release-notes-alpha]]
=== PHP Agent version alpha/preview

[[release-notes-alpha-1]]
==== Alpha1 release

_Coming soon_

// Using the template above, release notes go here.