@@ -475,22 +475,39 @@ def notifyStatus(def args = [:]) {
 def prepareRelease() {
   def branchName = "prepare-release-v${params.VERSION}"
   def tagName = "v${params.VERSION}"
-  def message = "Bump version ${params.VERSION} and create changelog"
-  def warning = """> THIS PR IS AUTOMATICALLY GENERATED BY RELEASE PIPELINE.
-IF YOU WOULD LIKE TO MAKE MANUAL CHANGES - YOU SHOULD [ABORT](${env.BUILD_URL}input) THE RELEASE PIPELINE FIRST."""
+  def message = "[${params.VERSION}] Bump version and create changelog"
+  def warning = """> THIS PR IS AUTOMATICALLY GENERATED BY RELEASE PIPELINE."""
+  def actions = """### Actions
+* If changes are fine then:
+  1. [aprove](${env.BUILD_URL}input) it. The pipeline will take care of the release.
+  1. Close this PR since it's not required anymore.
+  1. Delete branch `${branchName}`.
+* If changes are not correct then:
+  1. [abort](${env.BUILD_URL}input) it
+  1. Change and commit changes to this PR.
+  1. Merge this PR.
+  1. Delete branch `${branchName}`.
+  1. Run release [build](${env.JOB_URL}) with the `VERSION` parameter = `${params.VERSION}`"""
+  def previousVersion = sh(label: 'Get previous version', script: 'make -f .ci/Makefile previous-version', returnStdout: true).trim()
   sh label: 'Bump version', script: "VERSION=${params.VERSION} BRANCH_NAME=${env.BRANCH_NAME} make -f .ci/Makefile bump-version"
   if (sh(label: 'Bump version', script: 'git diff-index --quiet HEAD --', returnStatus: true) > 0) {
-    sh label: 'Create changelog', script: "VERSION=${params.VERSION} make -f .ci/Makefile changelog"
-    sh label: 'Git branch', script: """git checkout -b ${branchName}"""
-    sh label: 'Git commit', script: """git commit -m "${message}" """
+    // Create Changelog and verify it contains what's expected.
+    sh(label: 'Create changelog', script: "GITHUB_TOKEN=${GITHUB_TOKEN} TAG_VERSION=${tagName} make -f .ci/Makefile prepare-changelog changelog")
+    sh(label: "Git branch ${branchName}", script: """git checkout -b ${branchName}""")
+    sh(label: 'Git commit', script: """git commit -a -m "${message}" """)
     // TODO pr is null until returnStdout is supported
     def pr = githubCreatePullRequest(title: "[RELEASE] ${params.VERSION}",
-                                     description: "${warning}\n\n###WHAT\n${message}",
+                                     description: "${warning}\n\n${actions}",
                                      labels: 'docs,release,changelog',
                                      returnStdout: true)
     notifyStatus(slackStatus: 'warning', subject: "[${env.REPO}] Prepare ${params.VERSION} release steps to be validated.",
                  body: """Please (<${env.BUILD_URL}input|approve>) it or reject within 12 hours ONLY If no changes are required. Otherwise stop it and review the (<https://github.com/elastic/apm-agent-php/pulls|PR>).""")
     if (askAndWait("You are about to release version ${params.VERSION}. If you approve then changes will be committed and pushed.")) {
+      // Update branch.
+      sh(label: "Git branch ${env.BRANCH_NAME}", script: """git checkout ${env.BRANCH_NAME}""")
+      sh(label: 'Git rebase', script: """git rebase ${branchName}""")
+      sh(label: 'Git push', script: """git push origin ${env.BRANCH_NAME}""")
+      gitPush()
       gitCreateTag(tag: "${tagName}")
     } else {
       log(level: 'WARN', text: "Please review the PR.")
