@@ -1,3 +1,5 @@
+
+SHELL=/bin/bash -o pipefail
 IMAGE := test-php
 PHP_VERSION ?= 7.2
 DOCKERFILE ?= Dockerfile
@@ -63,6 +65,11 @@ composer: prepare  ## Run composer
 		$(IMAGE):${PHP_VERSION}$(SUFFIX) \
 		sh -c '/app/.ci/composer.sh'
 
+.PHONY: previous-version
+previous-version:  ## Fetch the current version
+	@grep '\(VERSION = \)' src/ElasticApm/ElasticApm.php | \
+	sed "s#.*= '\(.*\)';#\1#g"
+
 .PHONY: bump-version
 bump-version:  ## Bump the version given VERSION
 ifndef VERSION
@@ -71,13 +78,38 @@ ifndef VERSION
 endif
 	.ci/bump_version.sh
 
+.PHONY: prepare-changelog
+prepare-changelog:  ## Prepare the dependencies to run the changelog
+	@docker build --tag gren -f .ci/docker/gren/Dockerfile .
+
 .PHONY: changelog
-changelog:  ## Create the changelog
-ifndef VERSION
-	@echo "Please set VERSION in the environment to create the changelog"
+changelog:  ## Create the changelog for the given version
+ifndef GITHUB_TOKEN
+	@echo "Please set GITHUB_TOKEN in the environment to generate the changelog"
 	exit 1
 endif
-	@echo "TBD"
+ifndef TAG_VERSION
+	@echo "Please set TAG_VERSION in the environment to create the changelog"
+	exit 1
+endif
+	@docker run --rm -t \
+		--volume "$(PWD)":/app \
+		-u $(CURRENT_UID):$(CURRENT_GID) \
+		gren \
+			changelog \
+				--token="${GITHUB_TOKEN}" \
+				--generate \
+				--override \
+				--config .ci/.grenrc.js \
+				--changelog-filename="CHANGELOG-RELEASE.asciidoc"
+	@echo 'Merge generated changelog'
+	@sed '/CHANGELOG_AUTOMATION_KEYWORD/q' CHANGELOG.asciidoc > CHANGELOG.asciidoc.new
+	@echo '' >> CHANGELOG.asciidoc.new
+	@cat CHANGELOG-RELEASE.asciidoc >> CHANGELOG.asciidoc.new
+	@echo '' >> CHANGELOG.asciidoc.new
+	@comm -13 CHANGELOG.asciidoc.new CHANGELOG.asciidoc >> CHANGELOG.asciidoc.new
+	@mv CHANGELOG.asciidoc.new CHANGELOG.asciidoc
+	@rm CHANGELOG-RELEASE.asciidoc
 
 .PHONY: release
 release:  ## Run a release given the GITHUB_TOKEN and TAG_NAME
